Refactor index.html for improved structure

--- a/index.html
+++ b/index.html
@@ -56,6 +56,37 @@
         <a href="https://wa.me/5500000000000" class="block w-full bg-[#15803D] py-4 rounded-xl font-bold uppercase tracking-widest">
             Compartilhar no WhatsApp
         </a>
+        <div id="oracao" class="section hidden p-6">
+    <h2 class="text-[#E8B923] text-2xl font-bold mb-6 text-center underline">Clamor por Tacna</h2>
+    <div class="space-y-4">
+        <div class="bg-white/5 p-4 rounded-xl border-l-4 border-[#15803D]">
+            <p class="font-bold text-[#E8B923]">1. Portas Abertas</p>
+            <p class="text-sm">Para que o povo Quéchua receba a mensagem com o coração aberto.</p>
+        </div>
+        <div class="bg-white/5 p-4 rounded-xl border-l-4 border-[#15803D]">
+            <p class="font-bold text-[#E8B923]">2. Provisão</p>
+            <p class="text-sm">Pelo sustento da base e dos novos missionários que chegarão.</p>
+        </div>
+        <div class="bg-white/5 p-4 rounded-xl border-l-4 border-[#15803D]">
+            <p class="font-bold text-[#E8B923]">3. Saúde e Proteção</p>
+            <p class="text-sm">Pela família missionária contra toda enfermidade e oposição.</p>
+        </div>
+    </div>
+    <button onclick="alert('Obrigado por interceder! Sua oração move os céus.')" class="mt-8 w-full border-2 border-[#E8B923] py-3 rounded-lg font-bold text-[#E8B923]">
+        EU OREI POR ESTES MOTIVOS
+    </button>
+</div>
+
+<div id="palavra" class="section hidden p-6 text-center">
+    <h2 class="text-[#E8B923] text-2xl font-bold mb-6">Trilha Missionária</h2>
+    <div class="bg-[#0A2540] border border-white/10 p-6 rounded-3xl shadow-2xl">
+        <p class="text-xl italic mb-4">"Pede-me, e eu te darei as nações por herança, e os fins da terra por tua possessão."</p>
+        <p class="font-bold text-[#15803D]">Salmos 2:8</p>
+        <hr class="my-6 border-white/10">
+        <p class="text-sm text-gray-400">Leitura sugerida para hoje:</p>
+        <p class="text-lg font-bold">Atos Capítulo 13</p>
+    </div>
+</div>
     </div>
 
     <div id="doar" class="section p-6 text-center">
@@ -77,4 +108,5 @@
     </div>
 
     <div id="quiz" class="section p-6 text-center">
+
         <h2 class="text-[#E8B923] text-xl font-bold mb-4">Desafio Missionário</h2>
