Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Missão Peru - Tacna</title>
+  <title>Missão Peru</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body { font-family: system-ui, sans-serif; scroll-behavior: smooth; }
@@ -117,3 +117,4 @@
   </script>
 </body>
 </html>
+
