--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
     <p class="text-xs text-white/70 uppercase tracking-widest">Tecnologia a Serviço do Reino</p>
   </div>
 
-  <div class="fixed bottom-0 left-0 right-0 bg-[#0A2540] border-t border-[#15803D] flex justify-around py-4 z-50 shadow-2xl">
-    <button onclick="showSection('home')" class="flex flex-col items-center"><span class="text-[10px] font-bold text-[#E8B923]">INÍCIO</span></button>
-    <button onclick="showSection('doar')" class="flex flex-col items-center"><span class="text-[10px] font-bold text-white/70">DOAR</span></button>
-    <button onclick="showSection('oracao')" class="flex flex-col items-center"><span class="text-[10px] font-bold text-white/70">ORAÇÃO</span></button>
-    <button onclick="showSection('palavra')" class="flex flex-col items-center"><span class="text-[10px] font-bold text-white/70">BÍBLIA</span></button>
-    <button onclick="showSection('quiz')" class="flex flex-col items-center"><span class="text-[10px] font-bold text-white/70">QUIZ</span></button>
+  <div class=<div class="fixed bottom-0 left-0 right-0 bg-[#0A2540] border-t border-[#15803D] flex justify-around py-4 z-50 shadow-2xl">
+  <button onclick="showSection('home')" class="flex flex-col items-center"><span class="text-[9px] font-bold text-[#E8B923]">INÍCIO</span></button>
+  <button onclick="showSection('projeto')" class="flex flex-col items-center"><span class="text-[9px] font-bold text-white/70">PROJETO</span></button>
+  <button onclick="showSection('palavra')" class="flex flex-col items-center"><span class="text-[9px] font-bold text-white/70">BÍBLIA</span></button>
+  <button onclick="showSection('clube')" class="flex flex-col items-center"><span class="text-[9px] font-bold text-[#E8B923]">CLUBE</span></button>
+  <button onclick="showSection('doar')" class="flex flex-col items-center"><span class="text-[9px] font-bold text-white/70">DOAR</span></button>
+</div>
   </div>
 
   <div id="home" class="section active p-6 max-w-2xl mx-auto">
@@ -53,6 +54,37 @@
       <div class="bg-white/5 p-4 rounded-xl border-l-4 border-[#15803D]">🏠 Pela nova base em Tacna</div>
     </div>
   </div>
+  <div id="clube" class="section p-6 max-w-2xl mx-auto">
+    <div class="bg-gradient-to-br from-[#15803D] to-[#0A2540] p-6 rounded-3xl border-2 border-[#E8B923] text-center mb-6 shadow-2xl">
+        <h2 class="text-[#E8B923] text-2xl font-black uppercase italic">Clube Missionário</h2>
+        <p class="text-sm mt-2 text-white/90 leading-relaxed">Assine e libere acesso exclusivo a cursos de missões e nossa biblioteca de e-books.</p>
+    </div>
+
+    <div class="space-y-4">
+        <div class="bg-white/5 border border-white/10 p-5 rounded-2xl flex justify-between items-center group active:bg-white/10 transition-all">
+            <div>
+                <p class="font-bold text-[#E8B923] text-lg">Cursos de Missões</p>
+                <p class="text-[10px] text-gray-400 italic">Estratégias e Treinamento Transcultural</p>
+            </div>
+            <span class="text-xl opacity-50">🔒</span>
+        </div>
+
+        <div class="bg-white/5 border border-white/10 p-5 rounded-2xl flex justify-between items-center group active:bg-white/10 transition-all">
+            <div>
+                <p class="font-bold text-[#E8B923] text-lg">Biblioteca de E-books</p>
+                <p class="text-[10px] text-gray-400 italic">Incluindo "Caminhos do Coração" (PDF)</p>
+            </div>
+            <span class="text-xl opacity-50">📚</span>
+        </div>
+    </div>
+
+    <div class="mt-8 bg-black/20 p-6 rounded-2xl border border-white/10 text-center">
+        <p class="text-xs text-gray-300 mb-4 italic">"Ao se tornar um assinante, você mantém este aplicativo no ar e investe diretamente no campo missionário."</p>
+        <button onclick="showSection('doar')" class="w-full bg-[#E8B923] text-[#0A2540] py-4 rounded-xl font-black uppercase text-sm shadow-xl active:scale-95 transition-transform">
+            QUERO ME TORNAR UM MEMBRO
+        </button>
+    </div>
+</div>
 
   <div id="palavra" class="section p-4 max-w-2xl mx-auto">
     <div class="bg-white/5 border border-white/10 rounded-3xl p-6 shadow-2xl">
@@ -117,4 +149,5 @@
   </script>
 </body>
 </html>
+
 
